# kokoro-manim-voiceover

./: .gitignore  .pre-commit-config.yaml  AUTOMATIC_PUBLISHING_SETUP.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PYPI_PUBLISHING.md  README.md  TROUBLESHOOTING_PUBLISHING.md  bump_version.py  install.py  main.py  publish.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  setup.py  tructure and gitignore
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependency-update.yml  publish.yml  release.yml  test-model-download.yml
kokoro-mv/: __init__.py  koko.py
kokoro_mv/: __init__.py  koko.py  setup.py
samples/: chinese_mandarin.py  english_gb.py  english_us.py  french.py  hindi.py  italian.py  portuguese_br.py  spanish.py
tests/: test_module.py
