[project]
name = "kokoro-manim-voiceover"
version = "0.1.3"
description = "Professional library for generating high-quality voiceovers in Manim animations using Kokoro-82M model"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
dependencies = [
    "kokoro-onnx>=0.3.6",
    "manim>=0.19.0",
    "manim-voiceover>=0.3.7",
    "soundfile>=0.13.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "setuptools>=75.8.0",
    "tqdm>=4.64.0"
]
authors = [
    {name = "Nadeem Akhtar Khan", email = "nadeemak755@gmail.com"}
]
maintainers = [
    {name = "Nadeem Akhtar Khan", email = "nadeemak755@gmail.com"}
]
license = "MIT"
keywords = ["manim", "voiceover", "text-to-speech", "kokoro", "animation", "tts", "ai-voice"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/nkayzai/kokoro-manim-voiceover"
Repository = "https://github.com/nkayzai/kokoro-manim-voiceover"
Documentation = "https://github.com/nkayzai/kokoro-manim-voiceover#readme"
"Bug Tracker" = "https://github.com/nkayzai/kokoro-manim-voiceover/issues"



[project.scripts]
kokoro-mv-setup = "kokoro_mv.setup:main"

[build-system]
requires = ["setuptools>=75.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["kokoro_mv*"]

[tool.setuptools.package-data]
kokoro_mv = ["*.txt", "*.md"]

# UV-specific configurations
[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.uv.sources]
# Add any custom source configurations if needed

# Development and build configurations
[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
